2013-05-13  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Release 0.3.820
	* inst/NEWS: Release 0.3.820
	* inst/include/*: Upgraded to new release 3.820 of Armadillo
        * debian/*: Similarly updated for new release to Debian

2013-04-30  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Release 0.3.810.2
	* inst/NEWS: Release 0.3.810.2
	* inst/include/*: Upgraded to new release 3.810.2 of Armadillo
        * debian/*: Similarly updated for new release to Debian

2013-04-19  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Release 0.3.810.0
	* inst/NEWS: Release 0.3.810.0
	* inst/include/*: Upgraded to new release 3.810.0 of Armadillo
        * debian/*: Similarly updated for new release to Debian

2013-04-05  Dirk Eddelbuettel  <edd@debian.org>

	* debian/: Package will be added to Debian as well

2013-03-29  Dirk Eddelbuettel  <edd@debian.org>

	* inst/include/RcppArmadilloExtensions/sample.h: Applied another
	patch by Christian Gunning
	* inst/unitTests/runit.sample.R (test.sample): Idem

2013-03-12  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Release 0.3.800.1

	* inst/include/*: Upgraded to new release 3.800.1 of Armadillo

	* inst/unitTests/cpp/armadillo.cpp: Factored out of
	runit.RcppArmadillo.R to accelerate unit test run
	* inst/unitTests/runit.RcppArmadillo.R: Deploy refactored cpp code

2013-03-11  Dirk Eddelbuettel  <edd@debian.org>

	* inst/unitTests/cpp/sample.cpp: Regrouping C++ tests for sample()
	* inst/unitTests/runit.sample.R: Rewritten for sole external cpp file

2013-03-10  Dirk Eddelbuettel  <edd@debian.org>

	* inst/include/add-ons/sample.h: Added sample() function contributed
	by Christian Gunning
	* inst/unitTests/runit.sample.R: Added unit test for sample()
	contributed by Christian Gunning

2013-03-01  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Release 0.3.800.0
	* DESCRIPTION: Updated Description to reflect change of Armadillo
	license to MPL 2.0 (which is fully compatible with GPL so no change